--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 *{
     box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
+    overflow: hidden;
 }
 body{
     background-color: #242B2E;
@@ -28,7 +31,7 @@ body{
     font-size: 28px;
 }
 .item{
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 550;
     list-style: none;
     padding: 10px 20px;
@@ -91,13 +94,14 @@ button:hover{
     font-size: 18px;
     font-weight: 500;
     padding: 8px;
-    background-color: #4DD637;
+    background-color: #1FAA59;
     color: #ffffff;
-    border: 3px solid #4DD637;
+    border: 3px solid #1FAA59;
     border-radius: 7px;
-    width: 300px;
-    margin: 10px;
-    margin-left: 2.5%;
+    width: 350px;
+    margin-bottom: 150px;
+    /* margin: 10px; */
+    /* margin-left: 0.5%; */
 }   
 
 .btn:hover{
@@ -154,4 +158,212 @@ button:hover{
     margin-top:8px ;
     border-radius:8px ;
     border: 2px solid #12f712;
+}
+
+.titletext{
+    display: flex;
+    width: 100%;
+    height: 250px;
+    background-color: #dbd3d3;
+    color: #242B2E;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+    padding: 10px;
+}
+.titletext span{
+    background-color: #242B2E;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 7px;
+    margin-left: 10px;
+    /* border: 1px solid #ffffff; */
+    border-radius: 10px;
+    /* border-collapse: separate; */
+}
+.rcs-custom-scrollbar {
+    width: 25px;
+  }
+
+
+
+.home-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-top: 45px;
+}
+.home-left{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* justify-content: center; */
+    align-items: center;
+}
+.home-left h1{
+    font-size: 28px;
+    margin-right: 15px;
+}
+.img2{
+    margin: 25px;
+    margin-top: 150px;
+    padding-left: 100px;
+    margin-left: 0px;
+    border-left: 2px solid #ffffff;
+}
+.img3{
+    margin-left: 25px;
+    margin-bottom: 100px;
+}
+.home-left img{
+    width: 300px;
+    margin: 25px;
+    margin-top: 150px;
+    margin-bottom: 130px;
+}
+.home-right h1{
+    text-align: center;
+}
+.home-right p{
+    margin-right: 25px;
+    margin-left: 30px;
+    font-size: 20px;
+    line-height: 40px;
+    /* text-align: center; */
+}
+
+.list{
+    font-size: 25px;
+    margin-top: 20px;
+}
+.home-left h1{
+    margin: 30px;
+}
+
+.home-left p{
+    font-size: 20px;
+    margin: 30px;
+    margin-top: 20px;
+    line-height: 40px;
+}
+
+.link{
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+    padding: 8px;
+    background-color: #3944F7;
+    color: #ffffff;
+    border: 3px solid #393fb6;
+    border-radius: 7px;
+    width: 270px;
+    margin: 10px;
+    margin-left: 0%;
+    text-decoration: none;
+}
+.group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-right: 2px solid #ffffff;
+}
+.group-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-left: 2px solid #ffffff;
+}
+.radiobtn{
+    padding: 20px 30px;
+}
+.test h2{
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    width: 75%;
+}
+.options{
+    margin-top: 25px;
+    margin-bottom: 100px;
+}
+.test-h1{
+    margin-top: 50px;
+    padding-bottom: 5px;
+    text-decoration: underline;
+}
+
+.empty{
+    padding: 50px;
+    margin-bottom: 100px;
+}
+
+.medium-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+
+}
+.healthy-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.healthy-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.man-gif{
+    /* margin-right: 250px; */
+}
+.health-span{
+    background-color:#ffffff;
+    color: #242B2E;
+    padding-right: 5px;
+    border-radius: 5px;
+}
+.healthy-h1{
+    line-height: 50px;
+}
+
+.healthy-p{
+    width: 70%;
+    font-size: 20px;
+    line-height: 40px;
+    margin-bottom: 75px;
+}
+
+.medium-container h1{
+    margin: 25px 0px;
+}
+
+.ytvid-good{
+    margin-bottom: 100px;
+}
+.low-tips{
+    width: 70%;
+    margin-left: 50px;
+    font-size: 20px;
+}
+
+.medium-p{
+    font-size: 23px;
+    line-height: 50px;
+}
+
+.healthy-right h3{
+    margin-right: 20px;
+}
+
+.test-title{
+    margin-bottom:75px ;
+    margin-top: 50px;
+    text-decoration: underline;
 }
